Complete Paper Trading System: 0K virtual portfolio with comprehensive tracking
- Paper trading portfolio management with 0,000 starting capital
- Real-time P&L tracking showing NET POSITIVE/NEGATIVE status
- Advanced market analysis with 68.3/100 scoring system
- Complete trade history and performance analytics
- Email notifications for daily reports and alerts
- Interactive dashboard with Streamlit (optional)
- Daily trading runner with auto-execution capabilities
- Performance reports showing win rate, profit factor, returns
- Risk management with Kelly Criterion position sizing
- Multi-timeframe analysis (swing, position, buy & hold)
- S&P 500 integration with real-time Yahoo Finance data

Features implemented per user request:
✅ Track 0,000 fake money portfolio
✅ Show NET POSITIVE/NEGATIVE status daily/weekly/monthly
✅ Complete trade tracking with timestamps and P&L
✅ Performance analytics and comprehensive reporting
✅ Real-time market data and analysis
✅ Email notifications and dashboard interface

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,14 @@
 
 # Market data and exchange integration
 ccxt>=4.0.0              # Cryptocurrency exchange library
-yfinance>=0.2.0          # Yahoo Finance data
+yfinance>=0.2.0          # Yahoo Finance data (S&P 500, stocks)
 pandas>=2.0.0            # Data manipulation
 numpy>=1.24.0            # Numerical computing
+
+# S&P 500 and Traditional Markets
+alpaca-trade-api>=3.0.0  # Alpaca broker API (commission-free stocks)
+# ib-insync>=0.9.86       # Interactive Brokers API (uncomment if using IBKR)
+# schwab-api>=1.0.0       # Charles Schwab API (uncomment if using Schwab)
 
 # Technical analysis
 TA-Lib>=0.4.25           # Technical analysis library
