💰 Paper Trading Implementation - 000 Starting Capital
✅ PAPER TRADING FEATURES:
- Full paper trading bot with 000 starting balance
- Enhanced strategy testing in safe environment
- Realistic market simulation with spreads and fees
- Continuous trading mode for extended testing
- Demo mode showing key improvements

🔧 FILES ADDED:
- paper_trading_bot.py - Full implementation
- demo_paper_trading.py - Quick demo of improvements
- continuous_paper_trading.py - Extended testing mode
- Enhanced settings with paper trading enabled

📊 TESTING MODES:
1. Demo: Quick showcase of enhanced features
2. Continuous: Real-time simulation for hours
3. Full Bot: Complete implementation ready for backtesting

🎯 Ready for safe testing before live deployment!

--- a/config/enhanced_settings.yaml
+++ b/config/enhanced_settings.yaml
@@ -118,14 +118,15 @@ advanced:
   timeframes: ["1m", "5m", "15m"]
   
   # Paper trading mode
-  paper_trading: false               # Set to true for testing
+  paper_trading: true                # Set to true for testing
+  paper_starting_balance: 1000.0     # Starting with $1000
 
 # Exchange-Specific Settings
 exchanges:
   kraken:
     api_key: ""                      # Add your API key
     api_secret: ""                   # Add your API secret
-    sandbox: false                   # Set to true for testing
+    sandbox: true                    # Set to true for testing
     
     # Kraken-specific settings
     minimum_order_size: 0.0001       # BTC minimum
